--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,6 +15,7 @@ jobs:
         if: github.event.schedule == '0 9 * * *'
         env:
           GH_CRON_API_KEY: '${{ secrets.GH_CRON_API_KEY }}'
+          EVENT_NAME: '${{ github.event.name }}'
         run: |
           curl --location --request POST 'https://truegifter.com/api/graphql' \
           --header 'GH_CRON_API_KEY: $GH_CRON_API_KEY' \
@@ -22,4 +23,5 @@ jobs:
           --header 'Content-Type: application/json' \
           --data-raw '{"query":"mutation {\n    CloseDayOrders\n}","variables":{}}'
       - name: show
-        run: echo 'teste: ${{ github.event.name }}'
+        run: |
+          echo teste: $EVENT_NAME
