--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -17,13 +17,13 @@ jobs:
         # if: github.event.schedule == '0 9 * * *'
         run: |
           curl --location --request POST 'https://truegifter.com/api/graphql' \
-          --header 'GH_CRON_API_KEY: $GH_CRON_API_KEY' \
+          --header 'GH_CRON_API_KEY: ${{ GH_CRON_API_KEY }}' \
           --header 'x-access-origin: GithubCron' \
           --header 'Content-Type: application/json' \
           --data-raw '{"query":"mutation {\n    CloseDayOrders\n}","variables":{}}'
       - name: show
         run: |
-          echo 'teste: ${{ GH_CRON_API_KEY }}'
+          echo teste: ${{ GH_CRON_API_KEY }}
       - name: show 2
         run: |
           echo 'teste: ${{ secrets.GH_CRON_API_KEY }}'
