--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -16,7 +16,7 @@ jobs:
         # if: github.event.schedule == '0 9 * * *'
         run: |
           curl --location --request POST 'https://truegifter.com/api/graphql' \
-          --header 'GH_CRON_API_KEY: ${{ GH_CRON_API_KEY }}' \
+          --header 'GH_CRON_API_KEY: $GH_CRON_API_KEY ' \
           --header 'x-access-origin: GithubCron' \
           --header 'Content-Type: application/json' \
           --data-raw '{"query":"mutation {\n    CloseDayOrders\n}","variables":{}}'
