--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -15,7 +15,7 @@ jobs:
         shell: bash
         # if: github.event.schedule == '0 9 * * *'
         run: |
-          curl --location --request POST 'https://truegifter.com/api/graphql' \
+          curl --location --request POST 'http://179.158.238.68:3000/api/graphql' \
           --header 'GH_CRON_API_KEY: $GH_CRON_API_KEY ' \
           --header 'x-access-origin: GithubCron' \
           --header 'Content-Type: application/json' \
