--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -25,5 +25,5 @@ jobs:
           echo teste: $GH_CRON_API_KEY
       - name: show 2
         run: |
-          echo 'teste: ${{ github.event }}'
+          echo 'teste: ${{ toJSON(github.event) }}'
 
