--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Call API
         shell: bash
-        if: github.event.schedule == '0 9 * * *' || github.event_name == "workflow_dispatch"
+        if: github.event.schedule == '0 9 * * *' || github.event_name == 'workflow_dispatch'
         run: |
           curl --location --request POST 'http://179.158.238.68:3000/api/graphql' \
           --header 'GH_CRON_API_KEY: ${{ env.GH_CRON_API_KEY }}' \
