--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - name: Call API
         shell: bash
-        if: github.event.schedule == '0 9 * * *' || github.event_name == 'workflow_dispatch'
+        if: github.event.schedule == '0 9 * * *' || (github.event_name == 'workflow_dispatch' && github.event.inputs.job == 'cron-closeDayOrders')
         run: |
           curl --location --request POST 'http://179.158.238.68:3000/api/graphql' \
           --header 'GH_CRON_API_KEY: ${{ env.GH_CRON_API_KEY }}' \
@@ -40,6 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: show
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.job == 'cron-fake'
         run: |
           echo teste: $GH_CRON_API_KEY
 
