--- a/.github/workflows/merge-sql-files.yml
+++ b/.github/workflows/merge-sql-files.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create report file
+      - name: Merge SQL Files
         run: cd sql && ./merge-sql-files.sh
       - name: Commit report
         run: |
